--- a/FetchModule_summary.html
+++ b/FetchModule_summary.html
@@ -19,12 +19,13 @@
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc7a100t-3csg324</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD>
+No Errors</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='G:/University/term5/Az memary/ComputerArthitectureLab\_xmsgs/*.xmsgs?&DataKey=Warning'>1264 Warnings (1264 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -52,7 +53,41 @@ System Settings</A>
 
 
 
-
+&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
+<TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='4'><B>Device Utilization Summary (estimated values)</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DeviceUtilizationSummary(estimatedvalues)"><B>[-]</B></a></TD></TR>
+<TR ALIGN=CENTER BGCOLOR='#FFFF99'>
+<TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD COLSPAN='2'><B>Utilization</B></TD></TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
+<TD ALIGN=RIGHT>1304</TD>
+<TD ALIGN=RIGHT>126800</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>1%</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
+<TD ALIGN=RIGHT>592</TD>
+<TD ALIGN=RIGHT>63400</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>0%</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of fully used LUT-FF pairs</TD>
+<TD ALIGN=RIGHT>253</TD>
+<TD ALIGN=RIGHT>1643</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>15%</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded IOBs</TD>
+<TD ALIGN=RIGHT>131</TD>
+<TD ALIGN=RIGHT>210</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>62%</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Block RAM/FIFO</TD>
+<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>135</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>2%</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFG/BUFGCTRLs</TD>
+<TD ALIGN=RIGHT>9</TD>
+<TD ALIGN=RIGHT>32</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>28%</TD>
+</TR>
+</TABLE>
 
 
 
@@ -64,7 +99,7 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='G:/University/term5/Az memary/ComputerArthitectureLab\FetchModule.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri Nov 18 13:54:27 2022</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='G:/University/term5/Az memary/ComputerArthitectureLab\FetchModule.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Tue Dec 6 10:51:13 2022</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='G:/University/term5/Az memary/ComputerArthitectureLab\_xmsgs/xst.xmsgs?&DataKey=Warning'>1264 Warnings (1264 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='G:/University/term5/Az memary/ComputerArthitectureLab\_xmsgs/xst.xmsgs?&DataKey=Info'>8 Infos (8 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Translation Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Map Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Place and Route Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
@@ -75,9 +110,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='G:/University/term5/Az memary/ComputerArthitectureLab\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Dec 5 20:06:09 2022</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='G:/University/term5/Az memary/ComputerArthitectureLab\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Tue Dec 6 11:05:39 2022</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/05/2022 - 20:13:54</center>
+<br><center><b>Date Generated:</b> 12/06/2022 - 11:27:58</center>
 </BODY></HTML>
